# FA-R-Bot

./: package.json
examples/facr-chatbot/: .dockerignore  .env.example  .gitignore  Dockerfile  package-lock.json  package.json  railway.toml
examples/facr-chatbot/backend/: pyproject.toml
examples/facr-chatbot/backend/app/: facr_agent.py  knowledge_base.py  main.py  memory_store.py  server.py  title_agent.py  web_tools.py
examples/facr-chatbot/data/: disciplinarni-rad-od-1.7.2025.md  kontakty-facr-sekretariat.md  licencni-rad-talentovane-mladeze-facr-edice-2025-s-ucinnosti-od-1.10.2024.md  licencni-rad-talentovane-mladeze-facr-edice-2026.md  narizeni-komise-pro-cinnost-agentu-facr-c.-1-2023-s-ucinnosti-od-16.-1.-2024-.md  prestupni-rad-facr-od-1.6.2025.md  procesni-rad-od-1.7.2025.md  rad-agentu-facr-s-ucinnosti-od-15.-1.-2024-.md  rad-rozhodcich-a-delegatu-facr-s-ucinnosti-od-1.3.2025.md  rad-treneru-facr-s-ucinnosti-od-1.3.2025-684048216c7d5.md  registracni-rad-facr-s-ucinnosti-od-1.3.2025.md  sr-od-1.7.2025.md  stanovy-s-ucinnosti-od-1.6.2025-vcetne-priloh.md  vykladove-stanovisko-po-1-24-rad-agentu-facr.md  zasady-fotbalove-asociace-ceske-republiky-pro-ochranu-deti-ve-fotbalovem-prostredi-ucinnost-od-1.-6.-2021-.md
examples/facr-chatbot/data/Podklady MD FAČR - Smlouvy/: draft-standard-professional-contract-2025.md  priloha-radu-rozhodcich-a-delegatu-sazebnik-odmen-od-5-8-2025.md  (+2 more)
examples/facr-chatbot/frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
examples/facr-chatbot/scripts/: run-backend.sh
(+10 files in other folders)
